2011-03-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/OpalText/FreeType/OPFreeTypeFont.m: Implement more
	transformations, some bounding box stuff.
	* Source/OpalText/NSFont.h
	* Source/OpalText/NSFont.m:
	Store the font matrix as an CGAffineTransform for convenience.

2011-03-15 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/OpalText/FreeType/OPFreeTypeFont.m: Make FreeType
	handle text transforms (at least partially). Implement getting
	glyph advances.
	* Source/OpalText/FreeType/OPFreeTypeUtil.h: Add convenience
	functions for translating between CGAffineTransforms and
	FreeType vectors/matrices.

2011-03-14 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/OpalText/FreeType/OPFreeTypeFont.m: Implement some more
	NSFont methods in terms of FreeType.

2011-02-20 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/OpalText/FreeType/OPFreeTypeUtil.h: Also mark inline
	functions as static.

2011-02-20 Fred Kiefer <FredKiefer@gmx.de>

	* Source/OpalGraphics/CGContext.m: Add CMYK colour methods.

2010-11-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/OpalText/CTGlyphInfo.m
	* Source/OpalText/CTFontDescriptor.m
	* Source/OpalText/CTFont.m
	* Source/OpalText/CTFramesetter.m
	* Source/OpalText/CTFontCollection.m
	* Tests/gradients.m
	* Tests/x11.m: Clean up line endings and remove some compiler warnings.

2010-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GNUmakefile: Use := when setting ADDITIONAL_CPPFLAGS and
	ADDITIONAL_LDFLAGS to reduce the number of subshell invocations
	required to compile.
	* Tests/GNUmakefile: Same change for ADDITIONAL_LDFLAGS.